Making overall status offset consistent with the page

--- a/templates/status-page.gohtml
+++ b/templates/status-page.gohtml
@@ -9,6 +9,7 @@
         <style>
             body {margin: var(--large); display: flex; flex-direction: column}
             h1 {
+                margin-block-start: 0;
                 margin-block-end: calc(var(--large));
             }
             h1 span {
