--- a/templates/status-page.gohtml
+++ b/templates/status-page.gohtml
@@ -24,9 +24,9 @@
             h1.success span {background: var(--system-green-color)}
             h1.processing span {background: var(--system-yellow-color)}
             h1.error span {background: var(--system-red-color)}
-            span.subtitle {color: var(--subtle-color)}
+            time {color: var(--subtle-color); font-size: var(--fs-x-smaller)}
             table {
-                margin-block-start:var(--large);
+                margin-block-end:var(--large);
                 border-collapse: collapse;
                 border: 1px solid var(--subtle-color);
                 width: min-content;
@@ -42,7 +42,6 @@
     </head>
     <body>
         <h1 class="{{.State}}"><span>{{.State}}</span></h1>
-        <span class="subtitle">{{.TimestampTitle}} {{.Timestamp}}</span>
         <table>
             <colgroup>
                 <col/>
@@ -60,6 +59,7 @@
                 </tr>
             {{end}}
         </table>
+        <time>{{.TimestampTitle}} {{.Timestamp}}</time>
 {{/*        <ul>*/}}
 {{/*            {{range $name := .Names}}*/}}
 {{/*                <li>{{$name}}</li>*/}}
