--- a/templates/head.gohtml
+++ b/templates/head.gohtml
@@ -24,15 +24,15 @@
                 }
 
                 &.success {
-                    color: var(--system-green-color)
+                    color: var(--color-green)
                 }
 
                 &.processing {
-                    color: var(--system-yellow-color)
+                    color: var(--color-yellow)
                 }
 
                 &.error {
-                    color: var(--system-red-color)
+                    color: var(--color-red)
                 }
 
             }
@@ -82,7 +82,7 @@
             }
 
             a {
-                color: var(--system-blue-color);
+                color: var(--color-blue);
                 text-decoration: none;
             }
 
