--- a/templates/head.gohtml
+++ b/templates/head.gohtml
@@ -3,6 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="color-scheme" content="dark light">
+        <title>flared</title>
         {{template "css-base-themes"}}
         <style>
             body {
